--- a/recipes.html
+++ b/recipes.html
@@ -134,7 +134,7 @@
       <p>
         &copy; <span id="date">2023</span>
         <span class="footer-logo">SimplyRecipes</span>
-        Built by <a href="#">Me</a>
+        Built by <a href="https://github.com/abhishek06-github">Abhishek Pandey</a>
       </p>
     </footer>
 
